{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 121,
  "lineage": "2eb896e3-3a85-adde-4803-d04bf8c24969",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:internet-gateway/igw-0f347e5430dd7876e",
            "id": "igw-0f347e5430dd7876e",
            "owner_id": "356031655355",
            "tags": {
              "Name": "project_igw"
            },
            "tags_all": {
              "Name": "project_igw"
            },
            "vpc_id": "vpc-0aadc258ba24b8fc0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f347e5430dd7876e",
            "id": "r-rtb-096c48377877b23301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-096c48377877b2330",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.terra_igw",
            "module.vpc.aws_route_table.terra_rt",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:route-table/rtb-096c48377877b2330",
            "id": "rtb-096c48377877b2330",
            "owner_id": "356031655355",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aadc258ba24b8fc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e0e12695d474f0b",
            "route_table_id": "rtb-096c48377877b2330",
            "subnet_id": "subnet-060a585727c823231"
          },
          "dependencies": [
            "module.vpc.aws_route_table.terra_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083dcd8edd6e97598",
            "route_table_id": "rtb-096c48377877b2330",
            "subnet_id": "subnet-025564861db26ea44"
          },
          "dependencies": [
            "module.vpc.aws_route_table.terra_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:security-group/sg-05cdac5e2c7b6edc2",
            "description": "Public sg to access the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cdac5e2c7b6edc2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "356031655355",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-sg",
              "Project": "1.5"
            },
            "tags_all": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-sg",
              "Project": "1.5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aadc258ba24b8fc0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-0c273129dcd193322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c273129dcd193322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-private-subnet",
              "Project": "1.5",
              "Role": "private",
              "Subnet": "us-east-1a-3"
            },
            "tags_all": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-private-subnet",
              "Project": "1.5",
              "Role": "private",
              "Subnet": "us-east-1a-3"
            },
            "vpc_id": "vpc-0aadc258ba24b8fc0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-0c3266831a9f91032",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3266831a9f91032",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-private-subnet",
              "Project": "1.5",
              "Role": "private",
              "Subnet": "us-east-1b-4"
            },
            "tags_all": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-private-subnet",
              "Project": "1.5",
              "Role": "private",
              "Subnet": "us-east-1b-4"
            },
            "vpc_id": "vpc-0aadc258ba24b8fc0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-060a585727c823231",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060a585727c823231",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-public-subnet",
              "Project": "1.5",
              "Role": "public",
              "Subnet": "us-east-1a-1"
            },
            "tags_all": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-public-subnet",
              "Project": "1.5",
              "Role": "public",
              "Subnet": "us-east-1a-1"
            },
            "vpc_id": "vpc-0aadc258ba24b8fc0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:subnet/subnet-025564861db26ea44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025564861db26ea44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "356031655355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-public-subnet",
              "Project": "1.5",
              "Role": "public",
              "Subnet": "us-east-1b-2"
            },
            "tags_all": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-public-subnet",
              "Project": "1.5",
              "Role": "public",
              "Subnet": "us-east-1b-2"
            },
            "vpc_id": "vpc-0aadc258ba24b8fc0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356031655355:vpc/vpc-0aadc258ba24b8fc0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02ffe4990e6766c05",
            "default_route_table_id": "rtb-04b98b97214e8f408",
            "default_security_group_id": "sg-0c728b2cdc841f285",
            "dhcp_options_id": "dopt-09293ca0673bab044",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aadc258ba24b8fc0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b98b97214e8f408",
            "owner_id": "356031655355",
            "tags": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-vpc",
              "Project": "1.5"
            },
            "tags_all": {
              "ManagaedBy": "terrafrom",
              "Name": "my-dev-vpc",
              "Project": "1.5"
            }
          }
        }
      ]
    }
  ]
}